--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,5 @@ jobs:
           KUBECONFIG: ${{ secrets.KUBECONFIG }}
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         run: |
-          echo $KUBECONFIG
-          echo $KUBE_CONFIG > $(pwd)/config
+          echo $KUBECONFIG | base64 -di > $(pwd)/config
           docker run  -e "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" -e "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" -v $(pwd)/config:/root/.kube/config -v $(pwd)/:/apps concirrussre/helm:3.5.0 upgrade --install btc-spot-price ./helm --set image.tag=$MAGE_TAG --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY --namespace=default
