--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -24,8 +24,8 @@ resources:
 
 livenessProbe:
   enabled: true
-  # path: /health
-  path: /
+  path: /health
+  # path: /
   initialDelaySeconds: 10
   periodSeconds: 60
   timeoutSeconds: 10
@@ -34,8 +34,8 @@ livenessProbe:
 
 readinessProbe:
   enabled: true
-  # path: /health
-  path: /
+  path: /health
+  # path: /
   initialDelaySeconds: 10
   periodSeconds: 20
   timeoutSeconds: 10 
