--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,33 +9,33 @@ on:
   
 jobs:
   
-  # build:
-  #   name: Build Image and push to ECR
-  #   runs-on: ubuntu-latest
+  build:
+    name: Build Image and push to ECR
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.ZH_AWS_ACCESS_KEY }}
-  #         aws-secret-access-key: ${{ secrets.ZH_AWS_SECRET_KEY }}
-  #         aws-region: us-east-2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.ZH_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.ZH_AWS_SECRET_KEY }}
+          aws-region: us-east-2
       
-  #     - name: Login to ECR
-  #       id: login-ecr
-  #       uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-  #     - name: Build, tag and push image to ECR
-  #       env:
-  #         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-  #         ECR_REPOSITORY: btc-spot-price
-  #         IMAGE_TAG: ${{ github.sha }}
-  #       run: |
-  #         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-  #         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      - name: Build, tag and push image to ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: btc-spot-price
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
   deploy_helm:
     name: Deploy via helm charts
@@ -50,12 +50,12 @@ jobs:
           # ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REGISTRY: 590532860066.dkr.ecr.us-east-2.amazonaws.com
           ECR_REPOSITORY: btc-spot-price
-          # IMAGE_TAG: ${{ github.sha }}
-          IMAGE_TAG: 1.0.0
+          IMAGE_TAG: ${{ github.sha }}
+          # IMAGE_TAG: 1.0.0
           AWS_ACCESS_KEY_ID: ${{ secrets.ZH_AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.ZH_AWS_SECRET_KEY }}
           KUBECONFIG: ${{ secrets.KUBECONFIG }}
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         run: |
           echo $KUBECONFIG | base64 -di > $(pwd)/config
-          docker run  -e "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" -e "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" -v $(pwd)/config:/root/.kube/config -v $(pwd)/:/apps concirrussre/helm:3.5.0 upgrade --install btc-spot-price ./helm --set image.tag=$MAGE_TAG --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY --namespace=default
+          docker run  -e "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" -e "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" -v $(pwd)/config:/root/.kube/config -v $(pwd)/:/apps concirrussre/helm:3.5.0 upgrade --install btc-spot-price ./helm --set image.tag=$IMAGE_TAG --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY --namespace=default
