--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
   deploy_helm:
     name: Deploy via helm charts
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Checkout code
