--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,9 @@ on:
   workflow_dispatch:
   
 jobs:
-  
-  test:
+
+## Job to perform unit testing on code  
+  unit_test:
     name: Testing the code using pytest
     runs-on: ubuntu-latest
 
@@ -30,10 +31,11 @@ jobs:
         run: |
           pytest
 
+## Job to build docker image and push to ECR
   build:
     name: Build Image and push to ECR
     runs-on: ubuntu-latest
-    needs: test
+    needs: unit_test
 
     steps:
       - name: Checkout code
@@ -59,6 +61,7 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
+## Job to deploy application on EKS cluster using Helm charts
   deploy_helm:
     name: Deploy via helm charts
     runs-on: ubuntu-latest
@@ -81,4 +84,75 @@ jobs:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         run: |
           echo $KUBECONFIG | base64 -di > $(pwd)/config
-          docker run  -e "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" -e "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" -v $(pwd)/config:/root/.kube/config -v $(pwd)/:/apps concirrussre/helm:3.5.0 upgrade --install btc-spot-price ./helm --set image.tag=$IMAGE_TAG --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY --namespace=default
+          docker run -e "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" -e "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" -v $(pwd)/config:/root/.kube/config -v $(pwd)/:/apps concirrussre/helm:3.5.0 upgrade --install btc-spot-price ./helm --set image.tag=$IMAGE_TAG --set image.repository=$ECR_REGISTRY/$ECR_REPOSITORY --namespace=default
+
+## Job to perform api testing on application running on EKS cluster
+  api_test:
+    name: API Testing
+    runs-on: ubuntu-latest
+    needs: deploy_helm
+
+    steps:
+      - name: Sleep for 2 minutes
+        run: sleep 120s
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Install Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      
+      - name: Install newman
+        run: |
+          npm install -g newman
+        
+      - name: Run postman collection
+        run: |
+          newman run zh_api_test.json -r cli
+
+## Job to deploy application on EKS using terraform
+  terraform:
+    name: 'Terraform'
+    runs-on: ubuntu-latest
+    environment: develop
+    needs: api_test
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Checkout
+      run: |
+        cd ./tf-deploy
+
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: terraform init
+
+    # Checks that all Terraform configuration files adhere to a canonical format
+    - name: Terraform Format
+      run: terraform fmt -check
+
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan
+
+      # On push to master, build or change infrastructure according to Terraform configuration files
+      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+      run: terraform apply -auto-approve
