--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: ZeroHash Spot Price Helm Chart
-name: btc_spot_price
+name: btc-spot-price
 version: 1.0.0
